# bevy_voxel_plot

./: .gitignore  CHANGELOG.MD  Cargo.toml  LICENSE.MD  README.md
.github/workflows/: publish.yml  rust.yml
assets/shaders/: instancing.wgsl
examples/: bevy_egui.rs  bevy_pan_orbit_camera.rs  bevy_pointcloud_bunny.rs  simple_cubes.rs
src/: bevy_voxel_plot.rs  lib.rs  main.rs
