[package]
name = "bevy_voxel_plot"
version = "2.3.0"
edition = "2021"
authors = ["Linus Leo Stöckli"]
repository = "https://github.com/hacknus/bevy_voxel_plot"
description = "An efficient voxel plot with support for transparency for bevy."
readme = "README.md"
keywords = ["bevy", "gui", "voxel", "plot"]
categories = ["gui"]
documentation = "https://docs.rs/bevy_voxel_plot"
homepage = "https://github.com/hacknus/bevy_voxel_plot"
license = "Apache-2.0"

[dependencies]
bevy = "0.16"
bytemuck = "1.22.0"

[dev-dependencies]
bevy_panorbit_camera = { version = "0.26" }
bevy_egui = { version = "0.34" }
